# SOASM

./: CMakeLists.txt  README.md  main.cpp
cmake/: CPM.cmake
include/soasm/: asm.hpp  instr.hpp  instr_set_util.hpp  soisv1.hpp  types.hpp  x_opts.inc
include/soasm/models/: memory.hpp
include/soasm/soisv1/: instr_set.hpp  model.hpp  regs.hpp
include/soasm/util/: accessors_proxy.hpp  overloaded.hpp
src/: asm.hpp  instr_set.hpp  instr_set_util.hpp  memory.hpp  types.cpp  types.hpp  x_opts.inc
src/soisv1/: instr_set.cpp  instr_set.hpp  model.cpp  model.hpp  regs.hpp
